feat: add draft of slider section

--- a/singolo1.html
+++ b/singolo1.html
@@ -3,8 +3,33 @@
 <head>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="./css/singolo1.css">
-  <title></title>
+  <title>Singolo. Part 1</title>
 </head>
 <body>
+  <div class="container">
+    <header>
+      <div class="logo">Singolo<span id="asterisk">*</span></div>
+      <div class=top-menu>
+        <nav><a>Home</a></nav>
+        <nav><a>Service</a></nav>
+        <nav><a>Portfolio</a></nav>
+        <nav><a>About</a></nav>
+        <nav><a>Contact</a></nav>
+      </div>
+    </header>
+    <section class="slider">
+      <div>
+      <img class="left-arrow" src="./assets/chevleft.png"/>
+      <img src="./assets/iPhones.png"/>
+      <img id="slider-right-arrow" src="./assets/chevright.png"/>
+    </div>
+    </section>
+    <section class="ourservice">
+      <header>Our Service</header>
+      <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimmentum. 
+        Duis mollis, non commodo luctus, nisi erat porttitor ligula,
+         eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+    </section>
+  </div>
 </body>
 </html>
