--- a/singolo1.html
+++ b/singolo1.html
@@ -8,21 +8,23 @@
 <body>
   <div class="container">
     <header>
-      <div class="logo">Singolo<span id="asterisk">*</span></div>
-      <div class=top-menu>
-        <nav><a>Home</a></nav>
-        <nav><a>Service</a></nav>
-        <nav><a>Portfolio</a></nav>
-        <nav><a>About</a></nav>
-        <nav><a>Contact</a></nav>
+      <div class="logo-header">
+        <h1></h1>
+        <img src="assets/SINGOLO_.png" height="89"/>
+        <div class=top-menu>
+          <nav><a>Home</a></nav>
+          <nav><a>Service</a></nav>
+          <nav><a>Portfolio</a></nav>
+          <nav><a>About</a></nav>
+          <nav><a>Contact</a></nav>
+        </div>
       </div>
+      <img src="assets/HeaderBottom.png" height="6"/>
     </header>
     <section class="slider">
-      <div>
       <img class="left-arrow" src="./assets/chevleft.png"/>
       <img src="./assets/iPhones.png"/>
       <img id="slider-right-arrow" src="./assets/chevright.png"/>
-    </div>
     </section>
     <section class="ourservice">
       <header>Our Service</header>
