--- a/singolo1.html
+++ b/singolo1.html
@@ -9,8 +9,7 @@
   <div class="container">
     <header>
       <div class="logo-header">
-        <h1></h1>
-        <img src="assets/SINGOLO_.png" height="89"/>
+        <h1 class="logo">Singolo<span>*</span></h1>
         <div class=top-menu>
           <nav><a>Home</a></nav>
           <nav><a>Service</a></nav>
@@ -19,12 +18,15 @@
           <nav><a>Contact</a></nav>
         </div>
       </div>
-      <img src="assets/HeaderBottom.png" height="6"/>
+      <div class="logo-bottom"></div>    
     </header>
     <section class="slider">
-      <img class="left-arrow" src="./assets/chevleft.png"/>
-      <img src="./assets/iPhones.png"/>
-      <img id="slider-right-arrow" src="./assets/chevright.png"/>
+      <div class="slider-main-background">
+        <img class="left-arrow" src="./assets/chevleft.png"/>
+        <img src="./assets/iPhones.png"/>
+        <img id="slider-right-arrow" src="./assets/chevright.png"/>
+      </div>
+      <div class="slider-bottom-background "></div>
     </section>
     <section class="ourservice">
       <header>Our Service</header>
