feat: add page footer

--- a/singolo3.html
+++ b/singolo3.html
@@ -1,6 +1,5 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +7,6 @@
   <link rel="stylesheet" href="./css/singolo3.css">
   <link rel="stylesheet" href="./css/fonts.css">
 </head>
-
 <body>
   <section class="section quote">
     <div class="wrapper">
@@ -26,8 +24,8 @@
           <input class="input-text" id="input-name" type="text" name="name" placeholder="Name (Required)" required>
           <input class="input-text" id="input-email" type="email" name="email" placeholder="Email (Required)" required>
           <input class="input-text" id="input-subject" type="text" name="subject" placeholder="Subject">
-          <textarea class="input-text details" id="input-details" name="details" placeholder="Describe your project in detail..."
-          cols="40" rows="20"></textarea>
+          <textarea class="input-text details" id="input-details" name="details"
+            placeholder="Describe your project in detail..." cols="40" rows="20"></textarea>
           <input class="submit-button" type="submit" value="Submit">
         </form>
         <div class="contact-information">
@@ -43,6 +41,32 @@
       </div>
     </div>
   </section>
+  <footer class="bottom">
+    <div class="wrapper centering">
+      <div class="copyright">&#169;Copyright 2013</div>
+      <div class="social-media-icons">
+        <div class="social-media-icon">
+          <a href="https://www.facebook.com" target="_blank">
+            <img class="social-media-icon-image" src="./assets/facebook.png" alt="facebook">
+          </a>
+        </div>
+        <div class="social-media-icon">
+          <a href="https://google.com" target="_blank">
+            <img class="social-media-icon-image" src="./assets/google+.png" alt="google">
+          </a>
+        </div>
+        <div class="social-media-icon">
+          <a href="https://twitter.com" target="_blank">
+            <img class="social-media-icon-image" src="./assets/twitter.png" alt="twitter">
+          </a>
+        </div>
+        <div class="social-media-icon">
+          <a href="https://www.linkedin.com" target="_blank">
+            <img class="social-media-icon-image" src="./assets/linkedin.png" alt="linked">
+          </a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
-
 </html>
