--- a/index.html
+++ b/index.html
@@ -8,5 +8,240 @@
     <link rel="stylesheet" href="./css/fonts.css">
   </head>
   <body>
+    <header class="top">
+      <div class="wrapper">
+        <h1 class="logo-icon">
+          <a href="./index.html">Singolo</a>
+        </h1>
+        <nav>
+          <div class="navigation">
+            <div class="navigation-item"><a href="./index.html">Home</a></div>
+            <div class="navigation-item"><a href="#services">Services</a></div>
+            <div class="navigation-item"><a href="#portfolio">Portfolio</a></div>
+            <div class="navigation-item"><a href="#about-us">About</a></div>
+            <div class="navigation-item"><a>Contact</a></div>
+          </div>
+        </nav>
+      </div>
+    </header>
+    <section class="section-slider">
+      <div class="wrapper">
+        <div class="slider">
+          <img class="left-arrow" src="./assets/chevleft.png" alt="left-arrow">
+          <img class="vertical-Phone" src="./assets/verticalPhone.png" alt="iPhone">
+          <img class="horizontal-Pnone" src="./assets/horizontalPhone.png" alt="iPhone2">
+          <img class="right-arrow" src="./assets/chevright.png" alt="right-arrow">
+        </div>
+      </div>
+    </section>
+    <section class="section-services" id="services">
+      <div class="wrapper">
+        <div class="header-services">
+          <h2 class="header-services-title">Our Services</h2>
+          <p class="header-services-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum.
+            Duis mollis, non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce
+            dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        </div>
+        <div class="services-items">
+          <div class="services-item">
+            <div class="services-ellipse-border">
+              <img width="32" height="32" src="./assets/pen.png" alt="Pen">
+            </div>
+            <span class="services-item-title">Custom Design</span>
+            <span class="services-item-description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+              laoreet, viverra lacus ut, ultrices velit.</span>
+          </div>
+          <div class="services-item">
+            <div class="services-ellipse-border">
+              <img width="22" height="32" src="./assets/bulb.png" alt="Bulb">
+            </div>
+            <span class="services-item-title">Inovative Ideas</span>
+            <span class="services-item-description">Quisque luctus, quam eget molestie commodo, lacus purus cursus purus,
+              nec rutrum tellus dolor id lorem.</span>
+          </div>
+          <div class="services-item">
+            <div class="services-ellipse-border">
+              <img width="32" height="28" src="./assets/heart.png" alt="Heart">
+            </div>
+            <span class="services-item-title">Love Is The Answer</span>
+            <span class="services-item-description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et
+              consequat felis. Quisque condimentum.</span>
+          </div>
+          <div class="services-item">
+            <div class="services-ellipse-border">
+              <img width="22" height="32" src="./assets/phone.png" alt="Phone">
+            </div>
+            <span class="services-item-title">Responsive Layout</span>
+            <span class="services-item-description">Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit
+              nunc ligula. Praesent elit leo.</span>
+          </div>
+          <div class="services-item">
+            <div class="services-ellipse-border">
+              <img width="32" height="28" src="./assets/bubble.png" alt="Bubble">
+            </div>
+            <span class="services-item-title">24 / 7 Support</span>
+            <span class="services-item-description">Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a
+              sem erat. Pellentesque egestas venenatis lorem .</span>
+          </div>
+          <div class="services-item">
+            <div class="services-ellipse-border">
+              <img width="32" height="31" src="./assets/star.png" alt="Star">
+            </div>
+            <span class="services-item-title">Feel Like A Star</span>
+            <span class="services-item-description">Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh.
+              Fusce vitae aliquam tellus.</span>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="portfolio section" id="portfolio">
+      <div class="wrapper">
+        <header class="section-header">
+          <h2 class="section-title">Portfolio</h2>
+          <p class="section-description">Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia
+            odio sem nec elit.</p>
+        </header>
+        <div class="portfolio-filter">
+          <input class="filter-input-button filter-selected-input" value="All" type="button">
+          <input class="filter-input-button" value="Web Design" type="button">
+          <input class="filter-input-button" value="Graphic Design" type="button">
+          <input class="filter-input-button" value="Artwork" type="button">
+        </div>
+        <div class="portfolio-items">
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid1.png" alt="Portfolio image 1">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid2.png" alt="Portfolio image 2">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid3.png" alt="Portfolio image 3">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid4.png" alt="Portfolio image 4">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid5.png" alt="Portfolio image 5">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid6.png" alt="Portfolio image 6">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid7.png" alt="Portfolio image 7">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid8.png" alt="Portfolio image 8">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid9.png" alt="Portfolio image 9">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid10.png" alt="Portfolio image 10">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid11.png" alt="Portfolio image 11">
+          </div>
+          <div class="portfolio-item">
+            <img class="portfolio-image" src="./assets/portfolio-grid12.png" alt="Portfolio image 12">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about-us section" id="about-us">
+      <div class="wrapper">
+        <div class="section-header">
+          <h2 class="section-title" id="about">About Us</h2>
+          <p class="section-description">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis,
+            non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac
+            cursus commodo, tortor mauris condimentum nibh.</p>
+        </div>
+        <div class="persons">
+          <div class="person">
+            <img class="person-image" src="./assets/AdamJensen.png" alt="Adam Jensen">
+            <span class="person-name">Adam Jensen</span>
+            <span class="person-description">Quisque luctus, quam eget molestie commodo, lacus purus cursus
+              purus, nec rutrum tellus dolor id lorem.</span>
+            <div class="social-media-icons">
+              <div class="social-media-icon">
+                <a href="https://www.facebook.com" target="_blank">
+                  <img class="social-media-icon-image" src="./assets/facebook.png" alt="facebook">
+                </a>
+              </div>
+              <div class="social-media-icon">
+                <a href="https://google.com" target="_blank">
+                  <img class="social-media-icon-image" src="./assets/google+.png" alt="google">
+                </a>
+              </div>
+              <div class="social-media-icon">
+                <a href="https://twitter.com" target="_blank">
+                  <img class="social-media-icon-image" src="./assets/twitter.png" alt="twitter">
+                </a>
+              </div>
+              <div class="social-media-icon">
+                <a href="https://www.linkedin.com" target="_blank">
+                  <img class="social-media-icon-image" src="./assets/linkedin.png" alt="linked">
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="person">
+            <img class="person-image" src="./assets/DesmondMiles.png" alt="Desmond Miles">
+            <span class="person-name">Desmond Miles</span>
+            <span class="person-description">Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam
+              laoreet, viverra lacus ut, ultrices velit.</span>
+              <div class="social-media-icons">
+                <div class="social-media-icon">
+                  <a href="https://www.facebook.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/facebook.png" alt="facebook">
+                  </a>
+                </div>
+                <div class="social-media-icon">
+                  <a href="https://google.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/google+.png" alt="google">
+                  </a>
+                </div>
+                <div class="social-media-icon">
+                  <a href="https://twitter.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/twitter.png" alt="twitter">
+                  </a>
+                </div>
+                <div class="social-media-icon">
+                  <a href="https://www.linkedin.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/linkedin.png" alt="linked">
+                  </a>
+                </div>
+              </div>
+          </div>
+          <div class="person">
+            <img class="person-image" src="./assets/ScolaraVisari.png" alt="Scolara Visari">
+            <span class="person-name">Scolara Visari</span>
+            <span class="person-description">Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis,
+              et consequat felis. Quisque condimentum.</span>
+              <div class="social-media-icons">
+                <div class="social-media-icon">
+                  <a href="https://www.facebook.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/facebook.png" alt="facebook">
+                  </a>
+                </div>
+                <div class="social-media-icon">
+                  <a href="https://google.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/google+.png" alt="google">
+                  </a>
+                </div>
+                <div class="social-media-icon">
+                  <a href="https://twitter.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/twitter.png" alt="twitter">
+                  </a>
+                </div>
+                <div class="social-media-icon">
+                  <a href="https://www.linkedin.com" target="_blank">
+                    <img class="social-media-icon-image" src="./assets/linkedin.png" alt="linked">
+                  </a>
+                </div>
+              </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
