--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Singolo</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/fonts.css">
+  <script src="./script.js"></script>
 </head>
 <body>
   <header class="top">
