feat: add function to page header

--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>Singolo</title>
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/fonts.css">
-  <script src="./script.js"></script>
-</head>
+  </head>
 <body>
   <header class="top">
     <div class="wrapper">
@@ -16,11 +15,11 @@
       </h1>
       <nav>
         <div class="navigation">
-          <div class="navigation-item"><a href="./index.html">Home</a></div>
-          <div class="navigation-item"><a href="#services">Services</a></div>
-          <div class="navigation-item"><a href="#portfolio">Portfolio</a></div>
-          <div class="navigation-item"><a href="#about-us">About</a></div>
-          <div class="navigation-item"><a href="#quote">Contact</a></div>
+          <div class="navigation-item"><a class="navigation-item-link navigation-item-link-selected" href="./index.html">Home</a></div>
+          <div class="navigation-item"><a class="navigation-item-link" href="#services">Services</a></div>
+          <div class="navigation-item"><a class="navigation-item-link" href="#portfolio">Portfolio</a></div>
+          <div class="navigation-item"><a class="navigation-item-link" href="#about-us">About</a></div>
+          <div class="navigation-item"><a class="navigation-item-link" href="#quote">Contact</a></div>
         </div>
       </nav>
     </div>
@@ -307,5 +306,6 @@
       </div>
     </div>
   </footer>
+  <script src="./script.js"></script>
 </body>
 </html>
