fix: change css property to var and calc, and add target for visible title section

--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   <link rel="stylesheet" href="./css/fonts.css">
   </head>
 <body>
+  <div id="home"></div>
   <header class="top">
     <div class="wrapper">
       <h1 class="logo-icon">
-        <a href="./index.html">Singolo</a>
+        <a href="#">Singolo</a>
       </h1>
       <nav>
         <div class="navigation">
-          <div class="navigation-item"><a class="navigation-item-link navigation-item-link-selected" href="./index.html">Home</a></div>
+          <div class="navigation-item"><a class="navigation-item-link navigation-item-link-selected" href="#home">Home</a></div>
           <div class="navigation-item"><a class="navigation-item-link" href="#services">Services</a></div>
           <div class="navigation-item"><a class="navigation-item-link" href="#portfolio">Portfolio</a></div>
           <div class="navigation-item"><a class="navigation-item-link" href="#about-us">About</a></div>
@@ -23,7 +24,7 @@
         </div>
       </nav>
     </div>
-  </header>
+  </header> 
   <section class="section-slider">
     <div class="wrapper">
       <div class="slider">
@@ -34,7 +35,8 @@
       </div>
     </div>
   </section>
-  <section class="section-services" id="services">
+  <div id="services"></div>
+  <section class="section-services">
     <div class="wrapper">
       <div class="section-header">
         <h2 class="section-title title-color">Our Services</h2>
@@ -95,7 +97,8 @@
       </div>
     </div>
   </section>
-  <section class="portfolio section" id="portfolio">
+  <div id="portfolio"></div>
+  <section class="portfolio section">
     <div class="wrapper">
       <div class="section-header">
         <h2 class="section-title title-color">Portfolio</h2>
@@ -149,7 +152,8 @@
       </div>
     </div>
   </section>
-  <section class="about-us section" id="about-us">
+  <div id="about-us"></div>
+  <section class="about-us section">
     <div class="wrapper">
       <div class="section-header">
         <h2 class="section-title title-color" id="about">About Us</h2>
@@ -246,7 +250,8 @@
       </div>
     </div>
   </section>
-  <section class="section quote" id="quote">
+  <div id="quote"></div>
+  <section class="section quote">
     <div class="wrapper">
       <header class="quote-header-text-color">
         <div class="section-header">
