feat: into first slide split phone image to separate blocks

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
   <link rel="stylesheet" href="./css/style.css">
   <link rel="stylesheet" href="./css/fonts.css">
 </head>
+
 <body>
   <div id="home"></div>
   <header class="top">
@@ -31,8 +33,12 @@
       <div class="slider">
         <button class="slider-button previous-button" title="Previous slide"></button>
         <div class="slide slide-selected">
-          <img class="vertical-Phone" src="./assets/verticalPhone.png" alt="iPhone">
-          <img class="horizontal-Pnone" src="./assets/horizontalPhone.png" alt="iPhone2">
+          <div class="phone vertical-phone">
+            <img class="vertical-phone-display" src="./assets/phone-vertical-display.png" alt="iPhone">
+          </div>
+          <div class="phone horizontal-phone">
+            <img class="horizontal-phone-display" src="./assets/phone-horizontal-display.png" alt="iPhone">
+          </div>
         </div>
         <div class="slide">
           <img class="slide2-img" src="./assets/slider-2.svg" alt="slider2-phones" />
@@ -319,4 +325,5 @@
   </footer>
   <script src="./script.js"></script>
 </body>
+
 </html>
