feat: add function turn phone off \ on into first slide

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         <button class="slider-button previous-button" title="Previous slide"></button>
         <div class="slide slide-selected">
           <div class="phone vertical-phone">
-            <img class="vertical-phone-display" src="./assets/phone-vertical-display.png" alt="iPhone">
+            <img class="display vertical-phone-display" src="./assets/phone-vertical-display.png" alt="iPhone">
           </div>
           <div class="phone horizontal-phone">
-            <img class="horizontal-phone-display" src="./assets/phone-horizontal-display.png" alt="iPhone">
+            <img class="display horizontal-phone-display" src="./assets/phone-horizontal-display.png" alt="iPhone">
           </div>
         </div>
         <div class="slide">
