feat: add function to section 'Portfolio'

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           odio sem nec elit.</p>
       </div>
       <div class="portfolio-filter">
-        <input class="filter-input-button filter-selected-input" value="All" type="button">
+        <input class="filter-input-button filter-input-button-selected" value="All" type="button">
         <input class="filter-input-button" value="Web Design" type="button">
         <input class="filter-input-button" value="Graphic Design" type="button">
         <input class="filter-input-button" value="Artwork" type="button">
