feat: add function for sending of e-mail

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="./css/fonts.css">
 </head>
 
-<body>
+<body class="content">
   <div id="home"></div>
   <header class="top">
     <div class="wrapper">
@@ -323,6 +323,13 @@
       </div>
     </div>
   </footer>
+  <div class="pop-up">
+    <div class="blocker"></div>
+    <div class="pop-up-form">
+      <p class="pop-up-text"></p>
+      <button class="pop-up-close button">Ok</button>
+    </div>
+  </div>
   <script src="./script.js"></script>
 </body>
 
