--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="content">
-  <div id="home"></div>
+  <div class="link-to-header" id="home"></div>
   <header class="top">
     <div class="wrapper">
       <h1 class="logo-icon">
@@ -47,7 +47,7 @@
       </div>
     </div>
   </section>
-  <div id="services"></div>
+  <div class="link-to-header" id="services"></div>
   <section class="section-services">
     <div class="wrapper">
       <div class="section-header">
@@ -109,7 +109,7 @@
       </div>
     </div>
   </section>
-  <div id="portfolio"></div>
+  <div class="link-to-header" id="portfolio"></div>
   <section class="portfolio section">
     <div class="wrapper">
       <div class="section-header">
@@ -164,7 +164,7 @@
       </div>
     </div>
   </section>
-  <div id="about-us"></div>
+  <div class="link-to-header" id="about-us"></div>
   <section class="about-us section">
     <div class="wrapper">
       <div class="section-header">
@@ -262,7 +262,7 @@
       </div>
     </div>
   </section>
-  <div id="quote"></div>
+  <div class="link-to-header" id="quote"></div>
   <section class="section quote">
     <div class="wrapper">
       <header class="quote-header-text-color">
