feat: add css to pop-up, set maxlength for describe field and add function to reset form after close pop-up

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <input class="input-text" id="input-email" type="email" name="email" placeholder="Email (Required)" required>
           <input class="input-text" id="input-subject" type="text" name="subject" placeholder="Subject">
           <textarea class="input-text details" id="input-details" name="details"
-            placeholder="Describe your project in detail..." cols="40" rows="20"></textarea>
+            placeholder="Describe your project in detail...Limit 1000 characters" cols="40" rows="20" maxlength="1000"></textarea>
           <input class="submit-button" type="submit" value="Submit">
         </form>
         <div class="contact-information">
