feat: add responsive for 375px <= width < 768px and width < 375px

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <div class="link-to-header" id="home"></div>
   <header class="top">
     <div class="wrapper">
+      <button class="navigation-burger" title="Open menu"></button>
       <h1 class="logo-icon">
         <a href="#">Singolo</a>
       </h1>
@@ -43,7 +44,7 @@
           <div class="phone horizontal-phone">
             <img class="phone-body" src="./assets/phone-horizontal.svg" alt="phone-body">
             <img class="phone-display" src="./assets/phone-horizontal-display.png" alt="phone-horizontal-display">
-            <img class="phone-shadow" src="./assets/phone-horizontal-shadow.png" alt="phone-shadow">
+            <img class="phone-shadow" src="./assets/phone-horizontal-shadow.png" alt="phone-shadow">            
           </div>
         </div>
         <div class="slide">
@@ -280,7 +281,7 @@
             cursus commodo, tortor mauris condimentum nibh.</p>
         </div>
       </header>
-      <div class="quote-form-section centering">
+      <div class="quote-form-section">
         <form class="quote-form" action="#" method="POST">
           <input class="input-text" id="input-name" type="text" name="name" placeholder="Name (Required)" required>
           <input class="input-text" id="input-email" type="email" name="email" placeholder="Email (Required)" required>
@@ -304,9 +305,9 @@
     </div>
   </section>
   <footer class="bottom">
-    <div class="wrapper centering">
-      <div class="copyright">&#169;Copyright 2013</div>
-      <div class="social-media-icons footer-social-media-icons">
+    <div class=" wrapper bottom-wrapper">
+      <div class="copyright">&#169; Copyright 2013</div>
+      <div class="social-media-icons">
         <div class="social-media-icon">
           <a href="https://www.facebook.com" target="_blank">
             <img class="social-media-icon-image" src="./assets/facebook.png" alt="facebook">
